# platform.core.account.account-manager

./: AUTHORS  CMakeLists.txt  libaccounts-svc.manifest  tags
packaging/: account-manager.spec  accounts-service.service  org.tizen.account.manager.conf  org.tizen.account.manager.service
server/: CMakeLists.txt
server/include/: account-crypto-service.h  account-key-handler.h  account-server-db.h  account-server-private.h  account_type.h  lifecycle.h
server/src/: account-crypto-service.c  account-key-handler.c  account-server-db.c  account-server-private.c  account-server.c  lifecycle.c
src/accounts/server/: .account-server.c.swp  CMakeLists.txt  account-server-db.c  account-server-db.h  account-server.c  account-svcd.sh
